removing and merging wordstatscontroller with YouTubeController and change routes